hphp/hack/test/typecheck/classname/array_literal_bad.php.like_types.exp
File "array_literal_bad.php", line 10, characters 3-15:
  array<string, ~classname<~?(exact C1 | exact C2 | exact D)>>
File "array_literal_bad.php", line 11, characters 10-13:
Invalid return type (Typing[4110])
File "array_literal_bad.php", line 8, characters 42-53:
Expected ~classname<~I> because it is an unenforceable type
File "array_literal_bad.php", line 4, characters 7-8:
But got classname<~?(C1 | C2 | D)>; implicitly defined constant ::class is a string that contains the fully qualified name of C1
